docs: comprehensive documentation overhaul with source-verified content
- Rewrite all 11 doc files with facts verified against actual source code
- Fix version semantics (aggregate starts at -1, first event makes 0)
- Correct event_data/metadata columns as TEXT (not JSONB)
- Document BIGSERIAL auto-population for global_sequence
- Add complete auto-configuration chain (9 classes with ordering)
- Add full API reference with exact method signatures
- Document all Flyway migrations V1-V8
- Add AccountLedger tutorial with snapshot and projection examples
- Remove 3 redundant files (account-ledger-guide, examples/)