@@ -1,502 +1,611 @@
-# Testing Guide
+# Testing
 
-Comprehensive testing strategies for applications using the Firefly Event Sourcing Library.
+This guide covers testing strategies for applications built with `fireflyframework-eventsourcing`.
 
-## Overview
+## Unit Testing Aggregates
 
-The library supports multiple testing approaches:
+Aggregates are pure domain objects. They do not depend on Spring, databases, or any external infrastructure. This makes them straightforward to test with plain JUnit.
 
-- **Unit Tests**: Test individual components in isolation
-- **Integration Tests**: Test with real databases using Testcontainers
-- **Contract Tests**: Verify event schemas and backward compatibility
-- **Performance Tests**: Load testing and benchmarking
+### Creating a New Aggregate
 
-## Unit Testing
+```java
+import org.junit.jupiter.api.Test;
+import java.math.BigDecimal;
+import java.util.UUID;
+import static org.assertj.core.api.Assertions.*;
 
-### Testing Aggregates
+class AccountLedgerTest {
+
+    @Test
+    void shouldCreateAccountWithInitialDeposit() {
+        UUID accountId = UUID.randomUUID();
+        UUID customerId = UUID.randomUUID();
+
+        AccountLedger account = new AccountLedger(
+                accountId, "ACC-001", "CHECKING", customerId,
+                BigDecimal.valueOf(1000.00), "USD"
+        );
+
+        // State was derived from the AccountOpenedEvent
+        assertThat(account.getAccountNumber()).isEqualTo("ACC-001");
+        assertThat(account.getAccountType()).isEqualTo("CHECKING");
+        assertThat(account.getBalance()).isEqualByComparingTo(BigDecimal.valueOf(1000.00));
+        assertThat(account.getCurrency()).isEqualTo("USD");
+        assertThat(account.isFrozen()).isFalse();
+        assertThat(account.isClosed()).isFalse();
+
+        // One uncommitted event was produced
+        assertThat(account.getUncommittedEvents()).hasSize(1);
+        assertThat(account.getUncommittedEvents().get(0)).isInstanceOf(AccountOpenedEvent.class);
+
+        // Version starts at -1 and is incremented once by applyChange
+        assertThat(account.getCurrentVersion()).isEqualTo(0L);
+    }
+}
+```
+
+Key points about version semantics:
+- `AggregateRoot` initializes `version` to `-1`.
+- Each call to `applyChange(event)` increments the version by 1.
+- After one event is applied (the creation event), the version is `0`.
+
+### Testing Command Methods
 
 ```java
 @Test
-void shouldCreateAccount() {
-    UUID accountId = UUID.randomUUID();
-    Account account = new Account(accountId, "ACC-001", BigDecimal.valueOf(1000));
-    
-    // Verify initial state
-    assertEquals("ACC-001", account.getAccountNumber());
-    assertEquals(BigDecimal.valueOf(1000), account.getBalance());
-    
-    // Verify events were generated
-    assertEquals(1, account.getUncommittedEventCount());
-    assertTrue(account.getUncommittedEvents().get(0) instanceof AccountCreatedEvent);
+void shouldDepositMoney() {
+    AccountLedger account = createAccount(BigDecimal.valueOf(500.00));
+
+    account.deposit(BigDecimal.valueOf(200.00), "Wire Transfer", "REF-001", "user-1");
+
+    assertThat(account.getBalance()).isEqualByComparingTo(BigDecimal.valueOf(700.00));
+    assertThat(account.getUncommittedEvents()).hasSize(2); // AccountOpened + MoneyDeposited
+    assertThat(account.getCurrentVersion()).isEqualTo(1L);
 }
 
 @Test
-void shouldHandleBusinessRules() {
+void shouldRejectWithdrawalFromFrozenAccount() {
+    AccountLedger account = createAccount(BigDecimal.valueOf(1000.00));
+    account.freeze("Suspicious activity", "admin-1");
+
+    assertThatThrownBy(() ->
+            account.withdraw(BigDecimal.valueOf(100.00), "ATM", "REF-002", "user-1")
+    ).isInstanceOf(AccountFrozenException.class);
+}
+
+@Test
+void shouldRejectOverdraft() {
+    AccountLedger account = createAccount(BigDecimal.valueOf(100.00));
+
+    assertThatThrownBy(() ->
+            account.withdraw(BigDecimal.valueOf(200.00), "ATM", "REF-003", "user-1")
+    ).isInstanceOf(InsufficientFundsException.class);
+}
+
+private AccountLedger createAccount(BigDecimal initialDeposit) {
+    return new AccountLedger(
+            UUID.randomUUID(), "ACC-001", "CHECKING",
+            UUID.randomUUID(), initialDeposit, "USD"
+    );
+}
+```
+
+### Testing Event Replay
+
+Verify that an aggregate can be reconstructed from a sequence of stored events.
+
+```java
+@Test
+void shouldReplayEventsToRebuildState() {
     UUID accountId = UUID.randomUUID();
-    Account account = new Account(accountId, "ACC-001", BigDecimal.ZERO);
-    
-    // Test business rule violation
-    assertThrows(IllegalArgumentException.class, () -> {
-        account.withdraw(BigDecimal.valueOf(100));
-    });
+    UUID customerId = UUID.randomUUID();
+    Instant now = Instant.now();
+
+    // Build stored event envelopes as they would come from the database
+    List<StoredEventEnvelope> history = List.of(
+            StoredEventEnvelope.of(
+                    UUID.randomUUID(), accountId, "AccountLedger", 0L, 1L,
+                    "account.opened", now,
+                    AccountOpenedEvent.builder()
+                            .aggregateId(accountId)
+                            .accountNumber("ACC-001")
+                            .accountType("CHECKING")
+                            .customerId(customerId)
+                            .initialDeposit(BigDecimal.valueOf(1000.00))
+                            .currency("USD")
+                            .build(),
+                    null
+            ),
+            StoredEventEnvelope.of(
+                    UUID.randomUUID(), accountId, "AccountLedger", 1L, 2L,
+                    "money.deposited", now,
+                    MoneyDepositedEvent.builder()
+                            .aggregateId(accountId)
+                            .amount(BigDecimal.valueOf(500.00))
+                            .source("Wire Transfer")
+                            .reference("REF-001")
+                            .depositedBy("user-1")
+                            .build(),
+                    null
+            )
+    );
+
+    // Reconstruct from history
+    AccountLedger account = new AccountLedger(accountId);
+    account.loadFromHistory(history);
+
+    assertThat(account.getBalance()).isEqualByComparingTo(BigDecimal.valueOf(1500.00));
+    assertThat(account.getCurrentVersion()).isEqualTo(1L);
+    assertThat(account.getUncommittedEvents()).isEmpty();
 }
 ```
 
-### Testing Event Stores
+### Testing Snapshots
 
 ```java
-@ExtendWith(MockitoExtension.class)
-class EventStoreTest {
-    
-    @Mock
-    private DatabaseClient databaseClient;
-    
-    @Mock
-    private ObjectMapper objectMapper;
-    
-    @Test
-    void shouldAppendEvents() {
-        // Setup mocks
-        when(databaseClient.sql(any())).thenReturn(mockSpec);
-        when(mockSpec.bind(any(), any())).thenReturn(mockSpec);
-        
-        // Test implementation
-        R2dbcEventStore eventStore = new R2dbcEventStore(/* ... */);
-        StepVerifier.create(
-                eventStore.appendEvents(aggregateId, "Account", events, -1L)
-            )
-            .assertNext(stream -> {
-                assertEquals(3, stream.size());
-            })
-            .verifyComplete();
-    }
+@Test
+void shouldCreateAndRestoreFromSnapshot() {
+    AccountLedger original = createAccount(BigDecimal.valueOf(1000.00));
+    original.deposit(BigDecimal.valueOf(500.00), "Wire", "REF-001", "user-1");
+
+    // Create snapshot
+    AccountLedgerSnapshot snapshot = original.createSnapshot();
+    assertThat(snapshot.getBalance()).isEqualByComparingTo(BigDecimal.valueOf(1500.00));
+    assertThat(snapshot.getVersion()).isEqualTo(1L);
+    assertThat(snapshot.getSnapshotType()).isEqualTo("AccountLedger");
+
+    // Restore from snapshot
+    AccountLedger restored = AccountLedger.fromSnapshot(snapshot);
+    assertThat(restored.getBalance()).isEqualByComparingTo(BigDecimal.valueOf(1500.00));
+    assertThat(restored.getCurrentVersion()).isEqualTo(1L);
+    assertThat(restored.getAccountNumber()).isEqualTo(original.getAccountNumber());
 }
 ```
 
-## Integration Testing with Testcontainers
+## Testing with H2 (In-Memory Database)
 
-### PostgreSQL Integration Tests
+For fast integration tests that do not require PostgreSQL, you can use H2 with R2DBC. The library provides a minimal test schema at `src/test/resources/db/test-schema.sql`.
 
-The library includes comprehensive PostgreSQL integration tests using Testcontainers:
+### Test Schema
 
-```java
-@Testcontainers
-class EventStoreIntegrationTest {
+The test schema creates the projection-related tables that H2 needs:
 
-    @Container
-    static final PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:15-alpine")
-            .withDatabaseName("firefly_eventsourcing_test")
-            .withUsername("firefly_test")
-            .withPassword("test_password")
-            .withReuse(true);
+```sql
+-- projection_positions: checkpoint table for ProjectionService
+CREATE TABLE IF NOT EXISTS projection_positions (
+    projection_name VARCHAR(255) NOT NULL,
+    position BIGINT NOT NULL DEFAULT 0,
+    last_updated TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
+    CONSTRAINT pk_projection_positions PRIMARY KEY (projection_name)
+);
 
-    private R2dbcEventStore eventStore;
-    private ConnectionFactory connectionFactory;
-
-    @BeforeEach
-    void setUp() {
-        connectionFactory = new PostgresqlConnectionFactory(
-            PostgresqlConnectionConfiguration.builder()
-                .host(postgres.getHost())
-                .port(postgres.getFirstMappedPort())
-                .database(postgres.getDatabaseName())
-                .username(postgres.getUsername())
-                .password(postgres.getPassword())
-                .build()
-        );
-
-        // Setup event store with real PostgreSQL connection
-        DatabaseClient databaseClient = DatabaseClient.create(connectionFactory);
-        R2dbcEntityTemplate entityTemplate = new R2dbcEntityTemplate(connectionFactory);
-        ReactiveTransactionManager transactionManager = new R2dbcTransactionManager(connectionFactory);
-        TransactionalOperator transactionalOperator = TransactionalOperator.create(transactionManager);
-        
-        ObjectMapper objectMapper = new ObjectMapper();
-        objectMapper.registerModule(new JavaTimeModule());
-        
-        EventSourcingProperties properties = new EventSourcingProperties();
-        eventStore = new R2dbcEventStore(
-            databaseClient, entityTemplate, objectMapper, properties, 
-            transactionManager, transactionalOperator
-        );
-
-        createSchema().block();
-    }
-
-    @Test
-    void shouldPersistAndLoadEvents() {
-        UUID aggregateId = UUID.randomUUID();
-        List<Event> events = List.of(
-            new TestAccountCreatedEvent(aggregateId, "12345", BigDecimal.valueOf(1000))
-        );
-
-        // Persist events
-        StepVerifier.create(
-                eventStore.appendEvents(aggregateId, "Account", events, -1L)
-            )
-            .assertNext(stream -> {
-                assertEquals(1, stream.size());
-                assertEquals(aggregateId, stream.getAggregateId());
-            })
-            .verifyComplete();
-
-        // Load events
-        StepVerifier.create(
-                eventStore.loadEventStream(aggregateId, "Account")
-            )
-            .assertNext(stream -> {
-                assertEquals(1, stream.size());
-                assertEquals("test.account.created", stream.getFirstEvent().getEventType());
-            })
-            .verifyComplete();
-    }
-}
+-- account_balance_projections: example read model table
+CREATE TABLE IF NOT EXISTS account_balance_projections (
+    id BIGSERIAL NOT NULL,
+    account_id UUID NOT NULL,
+    balance DECIMAL(19,2) NOT NULL DEFAULT 0.00,
+    currency VARCHAR(3) NOT NULL DEFAULT 'USD',
+    last_updated TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
+    version BIGINT NOT NULL DEFAULT 0,
+    CONSTRAINT pk_account_balance_projections PRIMARY KEY (id),
+    CONSTRAINT uk_account_balance_projections_account_id UNIQUE (account_id)
+);
 ```
 
-### Test Configuration
-
-#### application-test.yml
+### H2 Test Configuration
 
 ```yaml
+# src/test/resources/application-test.yml
 spring:
   r2dbc:
-    # Will be overridden by Testcontainers
-    url: r2dbc:postgresql://localhost:5432/test
-    username: test
-    password: test
+    url: r2dbc:h2:mem:///testdb;DB_CLOSE_DELAY=-1
+    username: sa
+    password:
 
-  flyway:
-    enabled: false  # Managed by test setup
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:db/test-schema.sql
 
 firefly:
   eventsourcing:
+    enabled: true
+    event-scan-packages: "com.example.myapp"
     store:
-      batch-size: 10
+      type: r2dbc
     snapshot:
-      threshold: 5
+      enabled: false
     publisher:
-      enabled: false  # Disable for tests
-
-logging:
-  level:
-    org.fireflyframework: DEBUG
-    org.springframework.r2dbc: INFO
+      enabled: false
 ```
 
-#### Test Dependencies
+### H2 Limitations
 
-Add to your `pom.xml`:
+H2 does not support several PostgreSQL features used in the production migrations:
+
+- **BIGSERIAL** -- H2 uses `IDENTITY` or `AUTO_INCREMENT` instead
+- **Partial indexes** (e.g., `WHERE status = 'PENDING'`)
+- **Materialized views**
+- **Custom triggers and functions** (PL/pgSQL)
+- **`gen_random_uuid()`**
+- **Table partitioning**
+
+For tests that need the full `events`, `snapshots`, or `event_outbox` tables, you must either create H2-compatible versions of those tables in your test schema or use Testcontainers with a real PostgreSQL instance.
+
+## Integration Testing with Testcontainers
+
+Testcontainers provides a real PostgreSQL instance for your tests. This is the recommended approach for testing the full event sourcing stack including Flyway migrations, concurrency, and outbox processing.
+
+### Dependencies
 
 ```xml
-<dependencies>
-    <!-- Testcontainers -->
-    <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>postgresql</artifactId>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>r2dbc</artifactId>
-        <scope>test</scope>
-    </dependency>
-    
-    <!-- Reactor Test -->
-    <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-test</artifactId>
-        <scope>test</scope>
-    </dependency>
-    
-    <!-- Awaitility for async testing -->
-    <dependency>
-        <groupId>org.awaitility</groupId>
-        <artifactId>awaitility</artifactId>
-        <scope>test</scope>
-    </dependency>
-</dependencies>
+<dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>postgresql</artifactId>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>r2dbc</artifactId>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.testcontainers</groupId>
+    <artifactId>junit-jupiter</artifactId>
+    <scope>test</scope>
+</dependency>
 ```
 
-## Database Schema Testing
-
-### Schema Migration Tests
+### Testcontainers Configuration
 
 ```java
-@Test
-void shouldRunMigrations() {
-    Flyway flyway = Flyway.configure()
-        .dataSource(/* JDBC URL */)
-        .locations("classpath:db/migration")
-        .load();
-        
-    flyway.migrate();
-    
-    // Verify schema is correctly created
-    // Check tables, indexes, constraints
-}
-```
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.context.DynamicPropertyRegistry;
+import org.springframework.test.context.DynamicPropertySource;
+import org.testcontainers.containers.PostgreSQLContainer;
+import org.testcontainers.junit.jupiter.Container;
+import org.testcontainers.junit.jupiter.Testcontainers;
 
-### Schema Validation
+@SpringBootTest
+@Testcontainers
+class AccountLedgerIntegrationTest {
 
-```java
-@Test
-void shouldValidateEventSchema() {
-    // Test that event table supports all required operations
-    String createEventSql = """
-        INSERT INTO events (event_id, aggregate_id, aggregate_type, 
-                          aggregate_version, event_type, event_data, created_at)
-        VALUES (?, ?, ?, ?, ?, ?::jsonb, NOW())
-        """;
-    
-    // Execute and verify no constraints are violated
-}
-```
+    @Container
+    static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:16-alpine")
+            .withDatabaseName("testdb")
+            .withUsername("test")
+            .withPassword("test");
 
-## Performance Testing
+    @DynamicPropertySource
+    static void configureProperties(DynamicPropertyRegistry registry) {
+        // R2DBC URL (for the reactive event store)
+        registry.add("spring.r2dbc.url", () ->
+                "r2dbc:postgresql://" + postgres.getHost() + ":"
+                        + postgres.getFirstMappedPort() + "/testdb");
+        registry.add("spring.r2dbc.username", postgres::getUsername);
+        registry.add("spring.r2dbc.password", postgres::getPassword);
 
-### Load Testing
-
-```java
-@Test
-void shouldHandleHighThroughput() {
-    int numberOfAggregates = 1000;
-    int eventsPerAggregate = 100;
-    
-    StepVerifier.create(
-            Flux.range(0, numberOfAggregates)
-                .flatMap(i -> {
-                    UUID aggregateId = UUID.randomUUID();
-                    List<Event> events = generateEvents(aggregateId, eventsPerAggregate);
-                    return eventStore.appendEvents(aggregateId, "Account", events, -1L);
-                })
-                .collectList()
-        )
-        .assertNext(results -> {
-            assertEquals(numberOfAggregates, results.size());
-        })
-        .verifyTimeout(Duration.ofMinutes(5));
-}
-```
-
-### Memory Usage Testing
-
-```java
-@Test
-void shouldNotLeakMemory() {
-    Runtime runtime = Runtime.getRuntime();
-    long initialMemory = runtime.totalMemory() - runtime.freeMemory();
-    
-    // Perform operations
-    for (int i = 0; i < 10000; i++) {
-        // Create and process events
-    }
-    
-    System.gc();
-    long finalMemory = runtime.totalMemory() - runtime.freeMemory();
-    
-    // Assert memory usage is reasonable
-    assertTrue(finalMemory - initialMemory < 50 * 1024 * 1024); // 50MB threshold
-}
-```
-
-## Event Contract Testing
-
-### Schema Validation
-
-```java
-@Test
-void shouldMaintainEventSchema() {
-    AccountCreatedEvent event = new AccountCreatedEvent(
-        UUID.randomUUID(), "ACC-001", BigDecimal.valueOf(1000)
-    );
-    
-    // Serialize and deserialize
-    String json = objectMapper.writeValueAsString(event);
-    Event deserialized = objectMapper.readValue(json, Event.class);
-    
-    // Verify no data loss
-    assertTrue(deserialized instanceof AccountCreatedEvent);
-    AccountCreatedEvent deserializedEvent = (AccountCreatedEvent) deserialized;
-    assertEquals(event.getAccountNumber(), deserializedEvent.getAccountNumber());
-}
-```
-
-### Backward Compatibility
-
-```java
-@Test
-void shouldSupportLegacyEventFormats() {
-    // Test with old event format JSON
-    String legacyEventJson = """
-        {
-            "eventType": "account.created",
-            "aggregateId": "12345678-1234-1234-1234-123456789012",
-            "accountNumber": "ACC-001",
-            "balance": 1000.00
-        }
-        """;
-    
-    // Should still deserialize correctly
-    Event event = objectMapper.readValue(legacyEventJson, Event.class);
-    assertNotNull(event);
-}
-```
-
-## Test Utilities
-
-### Event Builder
-
-```java
-public class EventTestBuilder {
-    public static AccountCreatedEvent accountCreated(UUID aggregateId) {
-        return new AccountCreatedEvent(
-            aggregateId,
-            "ACC-" + System.currentTimeMillis(),
-            BigDecimal.valueOf(1000)
-        );
-    }
-    
-    public static List<Event> eventSequence(UUID aggregateId, int count) {
-        List<Event> events = new ArrayList<>();
-        events.add(accountCreated(aggregateId));
-        
-        for (int i = 1; i < count; i++) {
-            events.add(new MoneyDepositedEvent(
-                aggregateId, BigDecimal.valueOf(100), "REF-" + i
-            ));
-        }
-        
-        return events;
+        // JDBC URL (for Flyway migrations -- Flyway does not support R2DBC)
+        registry.add("spring.flyway.url", postgres::getJdbcUrl);
+        registry.add("spring.flyway.user", postgres::getUsername);
+        registry.add("spring.flyway.password", postgres::getPassword);
     }
 }
 ```
 
-### Aggregate Test Base
+### Full Integration Test Example
 
 ```java
-public abstract class AggregateTestBase<T extends AggregateRoot> {
-    
-    protected abstract T createAggregate(UUID id);
-    
+@SpringBootTest
+@Testcontainers
+class AccountLedgerIntegrationTest {
+
+    @Container
+    static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:16-alpine")
+            .withDatabaseName("testdb")
+            .withUsername("test")
+            .withPassword("test");
+
+    @DynamicPropertySource
+    static void configureProperties(DynamicPropertyRegistry registry) {
+        registry.add("spring.r2dbc.url", () ->
+                "r2dbc:postgresql://" + postgres.getHost() + ":"
+                        + postgres.getFirstMappedPort() + "/testdb");
+        registry.add("spring.r2dbc.username", postgres::getUsername);
+        registry.add("spring.r2dbc.password", postgres::getPassword);
+        registry.add("spring.flyway.url", postgres::getJdbcUrl);
+        registry.add("spring.flyway.user", postgres::getUsername);
+        registry.add("spring.flyway.password", postgres::getPassword);
+    }
+
+    @Autowired
+    private EventStore eventStore;
+
+    @Autowired
+    private SnapshotStore snapshotStore;
+
     @Test
-    void shouldHaveCorrectInitialState() {
-        UUID id = UUID.randomUUID();
-        T aggregate = createAggregate(id);
-        
-        assertEquals(id, aggregate.getId());
-        assertTrue(aggregate.hasUncommittedEvents());
+    void shouldPersistAndReloadAggregate() {
+        UUID accountId = UUID.randomUUID();
+        UUID customerId = UUID.randomUUID();
+
+        // Create aggregate and persist events
+        AccountLedger account = new AccountLedger(
+                accountId, "ACC-001", "CHECKING", customerId,
+                BigDecimal.valueOf(1000.00), "USD"
+        );
+
+        eventStore.appendEvents(
+                accountId, "AccountLedger",
+                account.getUncommittedEvents(), -1L
+        ).block();
+
+        account.markEventsAsCommitted();
+
+        // Reload from event store
+        EventStream stream = eventStore.loadEventStream(accountId, "AccountLedger").block();
+        AccountLedger reloaded = new AccountLedger(accountId);
+        reloaded.loadFromHistory(stream.getEvents());
+
+        assertThat(reloaded.getAccountNumber()).isEqualTo("ACC-001");
+        assertThat(reloaded.getBalance()).isEqualByComparingTo(BigDecimal.valueOf(1000.00));
+        assertThat(reloaded.getCurrentVersion()).isEqualTo(0L);
     }
-    
-    protected void given(T aggregate, Event... events) {
-        aggregate.loadFromHistory(Arrays.asList(events));
+
+    @Test
+    void shouldDetectConcurrencyConflict() {
+        UUID accountId = UUID.randomUUID();
+        UUID customerId = UUID.randomUUID();
+
+        // Create account
+        AccountLedger account = new AccountLedger(
+                accountId, "ACC-002", "SAVINGS", customerId,
+                BigDecimal.valueOf(500.00), "USD"
+        );
+        eventStore.appendEvents(
+                accountId, "AccountLedger",
+                account.getUncommittedEvents(), -1L
+        ).block();
+        account.markEventsAsCommitted();
+
+        // Two concurrent loads -- both see version 0
+        AccountLedger instance1 = loadAccount(accountId);
+        AccountLedger instance2 = loadAccount(accountId);
+
+        // First write succeeds (expectedVersion = 0)
+        instance1.deposit(BigDecimal.valueOf(100.00), "Wire", "REF-001", "user-1");
+        eventStore.appendEvents(
+                accountId, "AccountLedger",
+                instance1.getUncommittedEvents(), 0L
+        ).block();
+
+        // Second write fails -- the version in the database is now 1, but we expected 0
+        instance2.deposit(BigDecimal.valueOf(200.00), "Wire", "REF-002", "user-2");
+        assertThatThrownBy(() ->
+                eventStore.appendEvents(
+                        accountId, "AccountLedger",
+                        instance2.getUncommittedEvents(), 0L
+                ).block()
+        ).hasCauseInstanceOf(ConcurrencyException.class);
     }
-    
-    protected void when(T aggregate, Runnable action) {
-        action.run();
+
+    @Test
+    void shouldSaveAndLoadSnapshot() {
+        UUID accountId = UUID.randomUUID();
+        UUID customerId = UUID.randomUUID();
+
+        // Create account with several transactions
+        AccountLedger account = new AccountLedger(
+                accountId, "ACC-003", "CHECKING", customerId,
+                BigDecimal.valueOf(1000.00), "USD"
+        );
+        account.deposit(BigDecimal.valueOf(200.00), "Wire", "REF-001", "user-1");
+        account.deposit(BigDecimal.valueOf(300.00), "Wire", "REF-002", "user-1");
+
+        eventStore.appendEvents(
+                accountId, "AccountLedger",
+                account.getUncommittedEvents(), -1L
+        ).block();
+        account.markEventsAsCommitted();
+
+        // Save snapshot at version 2
+        AccountLedgerSnapshot snapshot = account.createSnapshot();
+        snapshotStore.saveSnapshot(snapshot).block();
+
+        // Load snapshot
+        AccountLedgerSnapshot loaded = (AccountLedgerSnapshot) snapshotStore
+                .loadLatestSnapshot(accountId, "AccountLedger").block();
+
+        assertThat(loaded).isNotNull();
+        assertThat(loaded.getBalance()).isEqualByComparingTo(BigDecimal.valueOf(1500.00));
+        assertThat(loaded.getVersion()).isEqualTo(2L);
     }
-    
-    protected void then(T aggregate, Class<? extends Event> expectedEventType) {
-        assertTrue(aggregate.hasUncommittedEvents());
-        assertTrue(expectedEventType.isInstance(aggregate.getLastUncommittedEvent()));
+
+    private AccountLedger loadAccount(UUID accountId) {
+        EventStream stream = eventStore.loadEventStream(accountId, "AccountLedger").block();
+        AccountLedger account = new AccountLedger(accountId);
+        account.loadFromHistory(stream.getEvents());
+        return account;
     }
 }
 ```
 
-## Continuous Integration
+## Projection Testing
 
-### GitHub Actions Example
+Projection tests verify that your read model is updated correctly as events flow through the system.
+
+```java
+@SpringBootTest
+@Testcontainers
+class AccountBalanceProjectionTest {
+
+    // ... Testcontainers setup (same as above) ...
+
+    @Autowired
+    private AccountBalanceProjection projection;
+
+    @Autowired
+    private EventStore eventStore;
+
+    @Test
+    void shouldUpdateBalanceOnDeposit() {
+        UUID accountId = UUID.randomUUID();
+        UUID customerId = UUID.randomUUID();
+
+        // Persist events
+        AccountLedger account = new AccountLedger(
+                accountId, "ACC-001", "CHECKING", customerId,
+                BigDecimal.valueOf(1000.00), "USD"
+        );
+        account.deposit(BigDecimal.valueOf(500.00), "Wire", "REF-001", "user-1");
+
+        eventStore.appendEvents(
+                accountId, "AccountLedger",
+                account.getUncommittedEvents(), -1L
+        ).block();
+
+        // Process events through the projection
+        projection.processBatch(2).block();
+
+        // Verify the read model
+        Long position = projection.getCurrentPosition().block();
+        assertThat(position).isGreaterThanOrEqualTo(2L);
+    }
+
+    @Test
+    void shouldResetProjection() {
+        projection.resetProjection().block();
+
+        Long position = projection.getCurrentPosition().block();
+        assertThat(position).isEqualTo(0L);
+    }
+}
+```
+
+## Reactive Testing with StepVerifier
+
+Since all store operations return `Mono` or `Flux`, use Reactor's `StepVerifier` for precise reactive assertions.
+
+```java
+import reactor.test.StepVerifier;
+
+@Test
+void shouldAppendEventsReactively() {
+    UUID accountId = UUID.randomUUID();
+    UUID customerId = UUID.randomUUID();
+
+    AccountLedger account = new AccountLedger(
+            accountId, "ACC-001", "CHECKING", customerId,
+            BigDecimal.valueOf(1000.00), "USD"
+    );
+
+    StepVerifier.create(
+            eventStore.appendEvents(
+                    accountId, "AccountLedger",
+                    account.getUncommittedEvents(), -1L
+            )
+    )
+    .assertNext(stream -> {
+        assertThat(stream.getCurrentVersion()).isEqualTo(0L);
+        assertThat(stream.getEvents()).hasSize(1);
+    })
+    .verifyComplete();
+}
+
+@Test
+void shouldStreamAllEventsReactively() {
+    StepVerifier.create(
+            eventStore.streamAllEvents(0L)
+                    .take(10)
+    )
+    .thenConsumeWhile(envelope -> {
+        assertThat(envelope.getGlobalSequence()).isPositive();
+        assertThat(envelope.getEvent()).isNotNull();
+        return true;
+    })
+    .verifyComplete();
+}
+```
+
+## CI Configuration
+
+The project uses Java 21 for compilation and testing. Below is a GitHub Actions workflow that runs tests with Testcontainers.
 
 ```yaml
-name: Tests
-on: [push, pull_request]
+name: CI
+
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_DB: firefly_eventsourcing_test
-          POSTGRES_USER: firefly_test
-          POSTGRES_PASSWORD: test_password
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-    
-    - name: Run tests
-      run: mvn clean test
-      env:
-        DB_HOST: localhost
-        DB_PORT: 5432
-        DB_NAME: firefly_eventsourcing_test
-        DB_USERNAME: firefly_test
-        DB_PASSWORD: test_password
+      - uses: actions/checkout@v4
+
+      - name: Set up Java 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Run tests
+        run: mvn verify -B
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: target/surefire-reports/
 ```
 
-## Best Practices
+Testcontainers starts a PostgreSQL Docker container automatically during the test run. The `ubuntu-latest` runner includes Docker, so no additional setup is needed.
 
-### Test Organization
+### Maven Surefire Configuration
 
-1. **Arrange-Act-Assert**: Structure tests clearly
-2. **Single Responsibility**: One concept per test
-3. **Descriptive Names**: Test names should describe behavior
-4. **Fast Feedback**: Keep tests fast and focused
+Ensure your `pom.xml` configures Surefire for Java 21:
 
-### Data Management
+```xml
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <configuration>
+        <argLine>--add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
+    </configuration>
+</plugin>
+```
 
-1. **Clean State**: Reset database between tests
-2. **Test Isolation**: Each test should be independent
-3. **Realistic Data**: Use production-like test data
-4. **Schema Evolution**: Test migration paths
+The `--add-opens` flag is needed because `AggregateRoot` uses reflection to invoke private event handler methods.
 
-### Assertions
+## Test Organization
 
-1. **Specific Checks**: Assert exact expected values
-2. **Error Scenarios**: Test failure paths
-3. **State Verification**: Check both events and final state
-4. **Performance Bounds**: Set acceptable performance limits
+A recommended test structure:
 
-## Troubleshooting
+```
+src/test/java/
+  com/example/myapp/
+    aggregate/
+      TaskTest.java                  # Unit tests for aggregate logic
+    events/
+      TaskCreatedEventTest.java      # Serialization round-trip tests
+    service/
+      TaskServiceIntegrationTest.java # Testcontainers integration tests
+    projection/
+      TaskProjectionTest.java        # Projection update tests
+src/test/resources/
+  application-test.yml               # Test configuration
+  db/
+    test-schema.sql                  # H2-compatible schema for fast tests
+```
 
-### Common Issues
+## Next Steps
 
-**Testcontainers not starting**
-- Ensure Docker is running
-- Check Docker permissions
-- Verify image availability
-
-**Database schema errors**
-- Run migrations manually to verify
-- Check SQL syntax for your database
-- Verify index creation
-
-**Serialization failures**
-- Register event types with Jackson
-- Check @JsonTypeName annotations
-- Verify ObjectMapper configuration
-
-**Performance issues**
-- Monitor connection pool settings
-- Check database query plans
-- Profile memory usage
-- Verify transaction boundaries
+- [Tutorial: Account Ledger](tutorial-account-ledger.md) -- a complete working example
+- [Configuration](configuration.md) -- tune test-specific properties
+- [Optional Enhancements](optional-enhancements.md) -- circuit breakers, metrics, health checks
